examples/memory/negative/05_memory_copy_assignment.skd
// Negative memory example 05: Memory handles cannot be reassigned or copied.

fn mirror_memory(Memory frame_memory, Memory scratch_memory) Int {
    frame_memory = scratch_memory
    return 0
}
